--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,11 @@
 <div class="container">
     <div class="row">
         <div class="col-sm-12">
+            <cart-medium></cart-medium>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-sm-12">
             <filter-with></filter-with>
         </div>
     </div>
